# Scraper-for-X

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: harness-spec.md
.claude/skills/x/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/plan/: 2026-07-20-active-mode-expansion-plan.md  2026-07-20-recon-findings.md  IMPLEMENTATION-KICKOFF.md
docs/wiki/: CLI-Reference.md  Configuration.md  Contributing.md  FAQ-and-Troubleshooting.md  Installation.md  Output-Schema.md  Python-API-Reference.md  Quick-Start.md  README.md  Security-and-Privacy.md  Transaction-ID.md
scripts/: check_fixtures_pii.py  check_tag_version.py
src/agentic_x/: __init__.py  _stealth_init.js  auth.py  cli.py  client.py  config.py  errors.py  gql.py  model.py  observe.py  parse.py  queryids.py  retrieve.py  session.py
src/scraper_for_x/: __init__.py  auth.py  cli.py  client.py  config.py  errors.py  gql.py  model.py  observe.py  parse.py  queryids.py  redact.py  retrieve.py  session.py  transaction.py
tests/: conftest.py  test_auth.py  test_cli.py  test_identifier.py  test_model.py  test_no_scrapling_import.py  test_observe.py  test_parse.py  test_redact.py  test_retrieve.py  test_transaction.py
tests/fixtures/: following.json  home_timeline.json  search_timeline.json  tweet_detail.json  user_tweets.json
wiki/: CLI-Reference.md  Configuration.md  Contributing.md  FAQ-and-Troubleshooting.md  Installation.md  Python-API-Reference.md  Quick-Start.md  README.md  Security-and-Privacy.md
