[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scraper-for-x"
version = "0.3.0"
description = "Read-only scraping of logged-in X/Twitter data via a harvest-then-replay hybrid: a stealth-browser login harvests the session once, then reads are replayed over httpx. No client-transaction-id replay."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "tjdwls101010" }]
keywords = ["twitter", "x", "scraper", "scraping", "graphql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
browser = [
    "scrapling[fetchers]>=0.4.10,<0.5",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "pre-commit>=3.8",
    "build>=1.2",
    # Semantically validates `scrape-x schema --json` output (a valid draft
    # 2020-12 schema) and that real fixture tweets conform to it -- the delegated
    # contract the x-fetch skill reads. A declared dev dep so the test runs in CI
    # instead of being importorskip'd away (see tests/test_model.py).
    "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/tjdwls101010/Scraper-for-X"
Issues = "https://github.com/tjdwls101010/Scraper-for-X/issues"
Changelog = "https://github.com/tjdwls101010/Scraper-for-X/blob/main/CHANGELOG.md"

[project.scripts]
scrape-x = "scraper_for_x.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scraper_for_x"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
